fixed CSS overflowing X

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -162,8 +162,6 @@ main {
 }
 
 /* pre , code */
-.content,
-.content div,
 .content div pre,
 .content div pre code {
   overflow-x: auto !important;
